[package]
name = "skate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
shadow-rs = "1.1.1"

[dependencies]
anyhow = "1.0.98"
async-ssh2-tokio = { version = "0.8.12", features = ["openssl"] }
async-trait = "0.1.88"
clap = { version = "4.5.38", features = ["derive", "env", "string"] }
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.27"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
itertools = "0.14.0"
shellexpand = "3.1.0"
serde_json = "1.0.140"
deunicode = "1.6.2"
sysinfo = "0.35.1"
chrono = "0.4.41"
base64 = "0.22.1"
colored = "3.0.0"
fs2 = "0.4.3"
log = "0.4.27"
handlebars = "6.3.2"
cron = "0.15.0"
russh = "=0.51.1"
syslog = "7.0.0"
tabled = "0.19.0"
dialoguer = "0.11.0"
reqwest = { version = "0.12.15", features = ["json"] }
shadow-rs = "1.1.1"
openssl = { version = "0.10.72", features = ["vendored"] }
validator = { version = "0.20.0", features= ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
sqlx = {  version="0.8.5", features = ["sqlite", "time", "chrono", "runtime-tokio"] }
uuid = { version="1.16.0", features=["v4"] }
time = { version="0.3.41", features = ["serde"]}

[target.'cfg(target_os = "linux")'.dependencies]
