[package]
name = "skate"
version = "0.1.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
shadow-rs = "1.4.0"

[dependencies]
anyhow = "1.0.100"
async-ssh2-tokio = { version = "0.10.0", features = ["openssl"] }
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive", "env", "string"] }
futures = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.27"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
itertools = "0.14.0"
shellexpand = "3.1.1"
serde_json = "1.0.145"
deunicode = "1.6.2"
sysinfo = "0.37.2"
chrono = "0.4.42"
base64 = "0.22.1"
colored = "3.0.0"
fs2 = "0.4.3"
log = "0.4.28"
handlebars = "6.3.2"
cron = "0.15.0"
russh = "=0.52.1"
syslog = "7.0.0"
tabled = "0.20.0"
dialoguer = "0.12.0"
reqwest = { version = "0.12.24", features = ["json"] }
shadow-rs = "1.4.0"
openssl = { version = "0.10.75", features = ["vendored"] }
validator = { version = "0.20.0", features= ["derive"] }
regex = "1.12.2"
once_cell = "1.21.3"
sqlx = {  version="0.8.6", features = ["sqlite", "time", "chrono", "runtime-tokio"] }
uuid = { version="1.18.1", features=["v4"] }
time = { version="0.3.44", features = ["serde"]}
env_logger = "0.11.8"
rand = "0.9.2"

[target.'cfg(target_os = "linux")'.dependencies]
